kyverno-policies/sa-p8-enforce.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sa-p8-enforce-latest
spec:
  validationFailureAction: enforce
  rules:
  - name: check-image-tag
    match:
      resources:
        namespaces:
        - sa-p8
        kinds:
        - Pod
        - Deployment
    validate:
      message: "La etiqueta 'latest' está prohibida en sa-p8."
      pattern:
        spec:
          containers:
          - image: "!*:latest"
